--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,12 @@ before:
     - go mod download
 builds:
 - binary: k8stunnel
+  goos:
+  - linux
+  - darwin
+  - windows
+  goarch:
+  - amd64
 archives:
 - replacements:
     darwin: Darwin
