--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
       with:
         go-version: '^1.14.0'
     - name: Release via goreleaser
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       uses: goreleaser/goreleaser-action@master
       with:
         args: release
